docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1116,7 +1116,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/3621728?v=4",
       "profile": "https://www.manning.com/books/redux-in-action?a_aid=coach&a_bid=48d05fcb",
       "contributions": [
-        "content"
+        "content",
+        "ideas"
       ]
     },
     {
