--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "pretty-quick": "^2.0.1"
   },
   "scripts": {
-    "build": "gatsby build && yarn build:lambda",
+    "build": "yarn build:app && yarn build:lambda",
     "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
