--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1735,6 +1735,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "developerfred",
+      "name": "codingsh",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/57037080?v=4",
+      "profile": "http://bit.ly/SupportMyCode",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
