docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1744,6 +1744,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ArtemKo7v",
+      "name": "Artem",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/2138231?v=4",
+      "profile": "https://github.com/ArtemKo7v",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
