docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1753,6 +1753,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "crisgarner",
+      "name": "Cristian Espinoza Garner",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/578688?v=4",
+      "profile": "http://medium.com/@crisgarner",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
