Update to prod search index

--- a/.github/workflows/docsearchConfig.json
+++ b/.github/workflows/docsearchConfig.json
@@ -1,5 +1,5 @@
 {
-  "index_name": "dev-ethereum-org",
+  "index_name": "prod-ethereum-org",
   "start_urls": [
     {
       "url": "https://ethereum.org/(?P<lang>.*?)/",
