--- a/.github/workflows/docsearchConfig.json
+++ b/.github/workflows/docsearchConfig.json
@@ -44,10 +44,8 @@
     },
     "lvl1": "#___gatsby h1",
     "lvl2": {
-      "selector": "//meta[@property=\"description\")]/@content",
-      "type": "xpath",
-      "global": true,
-      "default_value": "FIXME"
+      "selector": "meta[name=description]",
+      "global": true
     },
     "lvl3": "#___gatsby h2",
     "lvl4": "#___gatsby h3",
