--- a/netlify.toml
+++ b/netlify.toml
@@ -121,6 +121,7 @@
 [[redirects]]
   from = "/"
   to = "/en/"
+  force = true
 [[redirects]]
   from = "/what-is-ethereum/"
   to = "/en/what-is-ethereum/"
