--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-remark-autolink-headers": "^2.3.5",
     "gatsby-remark-images": "^3.3.12",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-csv": "^2.3.10",
     "gatsby-transformer-gitinfo": "^1.1.0",
     "gatsby-transformer-remark": "^2.8.16",
     "gatsby-transformer-sharp": "^2.5.5",
@@ -40,6 +41,7 @@
     "react-emoji-render": "^1.2.4",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.6.0",
+    "react-select": "^3.1.0",
     "remark-emoji": "^2.1.0",
     "styled-components": "^5.1.1"
   },
