--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1771,6 +1771,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "MariusVanDerWijden",
+      "name": "Marius van der Wijden",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/16664698?v=4",
+      "profile": "https://github.com/MariusVanDerWijden",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
