--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "glob": "^7.1.6",
     "husky": "^4.2.5",
     "prettier": "2.0.5",
     "pretty-quick": "^2.0.1"
@@ -56,7 +57,8 @@
     "start": "gatsby develop",
     "start:static": "gatsby build && gatsby serve",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "update-internal-links": "node src/scripts/updateInternalLinks.js"
   },
   "husky": {
     "hooks": {
