--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "github-slugger": "^1.3.0",
     "glob": "^7.1.6",
     "husky": "^4.2.5",
     "prettier": "2.0.5",
@@ -54,6 +55,7 @@
     "build:app": "gatsby build",
     "build:lambda": "netlify-lambda build src/lambda",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "generate-heading-ids": "node src/scripts/generateHeadingIDs.js",
     "start": "gatsby develop",
     "start:static": "gatsby build && gatsby serve",
     "serve": "gatsby serve",
