--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1789,6 +1789,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "KiChjang",
+      "name": "Keith Yeung",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/3248587?v=4",
+      "profile": "https://github.com/KiChjang",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
