--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ethereum-org-website",
   "version": "2.2.0",
-  "description": "Website of Ethereum.org",
+  "description": "Website of ethereum.org",
   "main": "index.js",
   "repository": "git@github.com:ethereum/ethereum-org-website.git",
   "author": "Sam Richards <sam.richards@ethereum.org>",
