docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1798,6 +1798,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "jordanlyall",
+      "name": "Jordan Lyall",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/999289?v=4",
+      "profile": "https://twitter.com/JordanLyall",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
