docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1807,6 +1807,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "elanh",
+      "name": "elanh",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/23513719?v=4",
+      "profile": "https://github.com/elanh",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
