docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1117,7 +1117,8 @@
       "profile": "https://www.manning.com/books/redux-in-action?a_aid=coach&a_bid=48d05fcb",
       "contributions": [
         "content",
-        "ideas"
+        "ideas",
+        "bug"
       ]
     },
     {
