docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1817,6 +1817,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "mohamedhayibor",
+      "name": "Mohamed Hayibor",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/11381259?v=4",
+      "profile": "https://mohamedhayibor.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
