--- a/netlify.toml
+++ b/netlify.toml
@@ -118,6 +118,7 @@
   to = "/sk/dapps/"
 
 # English path redirects
+# Force because the files exist (root paths still resolve to English)
 [[redirects]]
   from = "/"
   to = "/en/"
@@ -125,78 +126,103 @@
 [[redirects]]
   from = "/what-is-ethereum/"
   to = "/en/what-is-ethereum/"
+  force = true
 [[redirects]]
   from = "/eth/"
   to = "/en/eth/"
+  force = true
 [[redirects]]
   from = "/dapps/"
   to = "/en/dapps/"
+  force = true
 [[redirects]]
   from = "/wallets/"
   to = "/en/wallets/"
+  force = true
 [[redirects]]
   from = "/learn/"
   to = "/en/learn/"
+  force = true
 [[redirects]]
   from = "/community/"
   to = "/en/community/"
+  force = true
 [[redirects]]
   from = "/build/"
   to = "/en/build/"
+  force = true
 [[redirects]]
   from = "/developers/"
   to = "/en/developers/"
+  force = true
 [[redirects]]
   from = "/enterprise/"
   to = "/en/enterprise/"
+  force = true
 [[redirects]]
   from = "/whitepaper/"
   to = "/en/whitepaper/"
+  force = true
 [[redirects]]
   from = "/foundation/"
   to = "/en/foundation/"
+  force = true
 [[redirects]]
   from = "/eips/"
   to = "/en/eips/"
+  force = true
 [[redirects]]
   from = "/about/"
   to = "/en/about/"
+  force = true
 [[redirects]]
   from = "/privacy-policy/"
   to = "/en/privacy-policy/"
+  force = true
 [[redirects]]
   from = "/terms-of-use/"
   to = "/en/terms-of-use/"
+  force = true
 [[redirects]]
   from = "/cookie-policy/"
   to = "/en/cookie-policy/"
+  force = true
 [[redirects]]
   from = "/languages/"
   to = "/en/languages/"
+  force = true
 [[redirects]]
   from = "/enterprise/"
   to = "/en/enterprise/"
+  force = true
 [[redirects]]
   from = "/java/"
   to = "/en/java/"
+  force = true
 [[redirects]]
   from = "/python/"
   to = "/en/python/"
+  force = true
 [[redirects]]
   from = "/javascript/"
   to = "/en/javascript/"
+  force = true
 [[redirects]]
   from = "/golang/"
   to = "/en/golang/"
+  force = true
 [[redirects]]
   from = "/rust/"
   to = "/en/rust/"
+  force = true
 [[redirects]]
   from = "/dot-net/"
   to = "/en/dot-net/"
+  force = true
 [[redirects]]
   from = "/delphi/"
   to = "/en/delphi/"
+  force = true
 
 # Norwegian update
 ## All translations
