docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1679,7 +1679,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/60459707?v=4",
       "profile": "https://github.com/ph5500",
       "contributions": [
-        "content"
+        "content",
+        "code"
       ]
     },
     {
