--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-catch-links": "^2.3.7",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-lodash": "^3.3.11",
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-matomo": "^0.8.3",
     "gatsby-plugin-mdx": "^1.2.15",
@@ -35,6 +36,7 @@
     "gatsby-transformer-gitinfo": "^1.1.0",
     "gatsby-transformer-remark": "^2.8.16",
     "gatsby-transformer-sharp": "^2.5.5",
+    "lodash": "^4.17.20",
     "luxon": "^1.24.1",
     "netlify-lambda": "^1.6.3",
     "polished": "^3.6.5",
