docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1899,6 +1899,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "gichiba",
+      "name": "Griffin Ichiba Hotchkiss",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/9886144?v=4",
+      "profile": "https://github.com/gichiba",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
