--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1908,6 +1908,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "epheph",
+      "name": "Scott Bigelow",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/361654?v=4",
+      "profile": "https://github.com/epheph",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
