docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1917,6 +1917,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "hrkrshnn",
+      "name": "Harikrishnan Mulackal",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/13174375?v=4",
+      "profile": "https://github.com/hrkrshnn",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
