--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1570,7 +1570,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/15108323?v=4",
       "profile": "https://github.com/arturgontijo",
       "contributions": [
-        "ideas"
+        "ideas",
+        "content"
       ]
     },
     {
