Update GH action configs

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -23,6 +23,7 @@
 "Type: Translation":
   - src/content/translations/**/*
   - src/intl/*
+  - src/utils/translations.js
 
 "Type: Content":
   - src/pages/*
