docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1963,6 +1963,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "taxmeifyoucan",
+      "name": "Mário Havel",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/61149543?v=4",
+      "profile": "https://github.com/taxmeifyoucan",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
