docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1972,6 +1972,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "JosefJ",
+      "name": "JosefJ",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/10713123?v=4",
+      "profile": "http://Polynom.com",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
