--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1781,7 +1781,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/16664698?v=4",
       "profile": "https://github.com/MariusVanDerWijden",
       "contributions": [
-        "content"
+        "content",
+        "ideas"
       ]
     },
     {
