docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1991,6 +1991,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "slipperybeluga",
+      "name": "slipperybeluga",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6125744?v=4",
+      "profile": "https://github.com/slipperybeluga",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
