--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2009,6 +2009,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "shreyashariharan3",
+      "name": "shreyashariharan3",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/48186822?v=4",
+      "profile": "https://github.com/shreyashariharan3",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
