--- a/netlify.toml
+++ b/netlify.toml
@@ -256,6 +256,14 @@
   from = "/en/delphi/"
   to = "/en/developers/docs/programming-languages/delphi/"
 
+
+# English fallback redirect
+# If no page exists at /request-url, redirect to /en/request-url
+[[redirects]]
+  from = "/*"
+  to = "/en/:splat"
+  force = false
+
 # A redirect rule with all the supported properties
 # [[redirects]]
 #   from = "/old-path"
