docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2018,6 +2018,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "AdrianClv",
+      "name": "Adrián Calvo",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/9255560?v=4",
+      "profile": "https://www.linkedin.com/in/adrianclv/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
