docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -148,7 +148,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/1433595?v=4",
       "profile": "https://github.com/djrtwo",
       "contributions": [
-        "content"
+        "content",
+        "review"
       ]
     },
     {
