--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2028,6 +2028,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "daviroo",
+      "name": "daviroo",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3502409?v=4",
+      "profile": "https://github.com/daviroo",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
