docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2055,6 +2055,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "franzihei",
+      "name": "Franziska Heintel",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/41991517?v=4",
+      "profile": "https://github.com/franzihei",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
