docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2064,6 +2064,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "umair-me",
+      "name": "Muhammad Umair Irshad",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/834935?v=4",
+      "profile": "http://umair.me",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
