docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -121,7 +121,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/9073706?v=4",
       "profile": "https://github.com/chriseth",
       "contributions": [
-        "content"
+        "content",
+        "review"
       ]
     },
     {
