--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2121,6 +2121,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "voska",
+      "name": "Matt Voska",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3444419?v=4",
+      "profile": "https://github.com/voska",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
