--- a/netlify.toml
+++ b/netlify.toml
@@ -259,10 +259,12 @@
 
 # English fallback redirect
 # If no page exists at /request-url, redirect to /en/request-url
-[[redirects]]
-  from = "/*"
-  to = "/en/:splat"
-  force = false
+# WARNING: this causes the development environment to fail when running `netlify dev`
+# https://github.com/netlify/cli/issues/1299
+# [[redirects]]
+#   from = "/*"
+#   to = "/en/:splat"
+#   force = false
 
 # A redirect rule with all the supported properties
 # [[redirects]]
