docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2130,6 +2130,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "mustafawm",
+      "name": "mustafa",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/13101565?v=4",
+      "profile": "https://github.com/mustafawm",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
