docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2148,6 +2148,16 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "detohm",
+      "name": "Attaphong Rattanaveerachanon",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/4770525?v=4",
+      "profile": "https://github.com/detohm",
+      "contributions": [
+        "bug",
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
