docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2158,6 +2158,15 @@
         "bug",
         "content"
       ]
+    },
+    {
+      "login": "liaojianqi",
+      "name": "LoinLiao",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/14259182?v=4",
+      "profile": "https://github.com/liaojianqi",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
