docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2176,6 +2176,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "alcuadrado",
+      "name": "Patricio Palladino",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/176499?v=4",
+      "profile": "http://www.nomiclabs.io",
+      "contributions": [
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
