docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2194,6 +2194,16 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "MashhoodIjaz",
+      "name": "MashhoodIjaz",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/33490414?v=4",
+      "profile": "https://github.com/MashhoodIjaz",
+      "contributions": [
+        "bug",
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
