--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2146,7 +2146,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/54227730?v=4",
       "profile": "https://github.com/wackerow",
       "contributions": [
-        "code"
+        "code",
+        "bug"
       ]
     },
     {
