docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2203,7 +2203,7 @@
       "profile": "https://github.com/MashhoodIjaz",
       "contributions": [
         "bug",
-        "content"        
+        "content"
       ]
     },
     {
@@ -2211,6 +2211,15 @@
       "name": "Dan Nolan",
       "avatar_url": "https://avatars2.githubusercontent.com/u/4423365?v=4",
       "profile": "https://www.chainshot.com/",
+      "contributions": [
+        "content"
+      ]
+    },
+    {
+      "login": "marekkirejczyk",
+      "name": "Marek Kirejczyk",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/197522?v=4",
+      "profile": "https://github.com/marekkirejczyk",
       "contributions": [
         "content"
       ]
