--- a/src/data/developer-glossary.yaml
+++ b/src/data/developer-glossary.yaml
@@ -55,7 +55,7 @@
   definition: An account containing code that executes whenever it receives a transaction from another account (EOA or contract).
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: contract-creation-transaction
-  name: Contract creation transaction
+  name: contract creation transaction
   definition: A special transaction, with the "zero address" as the recipient, that is used to register a contract and record it on the Ethereum blockchain (see "zero address").
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: dao
@@ -67,15 +67,15 @@
   definition: Decentralized application. At a minimum, it is a smart contract and a web user interface. More broadly, a DApp is a web application that is built on top of open, decentralized, peer-to-peer infrastructure services. In addition, many DApps include decentralized storage and/or a message protocol and platform.
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: deed
-  name: Deed
+  name: deed
   definition: Non-fungible token (NFT) standard introduced by the ERC721 proposal. Unlike ERC20 tokens, deeds prove ownership and are not interchangeable, though they are not recognized as legal documents in any jurisdiction—at least not currently (see also "NFT").
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: difficulty-setting
-  name: Difficulty
+  name: difficulty
   definition: A network-wide setting that controls how much computation is required to produce a proof of work.
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: digital-signatures
-  name: Digital signature
+  name: digital signature
   definition: A short string of data a user produces for a document using a private key such that anyone with the corresponding public key, the signature, and the document can verify that (1) the document was "signed" by the owner of that particular private key, and (2) the document was not changed after it was signed.
   source: Provided in whole or in part by [Mastering Ethereum](https://github.com/ethereumbook/ethereumbook) by [Andreas M. Antonopoulos, Gavin Wood](https://ethereumbook.info) under CC-BY-SA
 - id: ecdsa
